--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@expo/webpack-config": "^0.16.23",
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
+        "css-loader": "^6.7.1",
+        "laravel-mix": "^6.0.10",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "ts-loader": "^9.3.0",
         "vue": "^2.6.12",
-        "vue-loader": "^15.9.7",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "babel-preset-es2015": "^6.24.1",
+        "cross-env": "^7.0.3"
     }
 }
